fixed issue where width of photos page was too small

--- a/web/css/style.css
+++ b/web/css/style.css
@@ -15,7 +15,7 @@
   display: table;
 }
 
-#photoEditFormContainer {
+#photoEditFormContainer, #photoGallery {
   width: 900px;
 }
 
